# Digital-Twin-Hackathon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  mermaid-config.json  package-lock.json  package.json  requirements-docs.txt
.github/: dependabot.yml
apps/ai-worker/: .gitignore  AI_AGENTS.md  AI_ARCHITECTURE.md  AI_PROVIDER_SYSTEM.md  AI_SECURITY.md  Dockerfile  RAG_ARCHITECTURE.md  README.md  pyproject.toml
apps/ai-worker/src/edt_ai_worker/: __init__.py  __main__.py  agents.py  api.py  authorization.py  business_intelligence.py  calendar_math.py  canonical.py  decision_engines.py  decision_models.py  document_links.py  documents.py  embeddings.py  enterprise_agents.py  enterprise_audit.py  errors.py  evidence.py  factory.py  gateway.py  governance.py  industry_models.py  intelligence_models.py  loops.py  marketing_intelligence.py  mcp.py  memory.py  models.py  providers.py  rag.py  routing.py  safety.py  settings.py  simulation.py  skills.py  snapshot.py  storage.py  tenancy.py
apps/ai-worker/tests/: conftest.py  test_ai_api_security.py  test_ai_gateway.py  test_ai_providers.py  test_business_intelligence.py  test_decision_engines.py  test_documents_security.py  test_enterprise_intelligence.py  test_enterprise_load.py  test_enterprise_security.py  test_evidence.py  test_marketing_intelligence.py  test_rag_security.py  test_simulation.py  test_snapshot.py  test_storage_security.py  test_tenancy_api.py
apps/ai-worker/tests/golden/: simulation-vector.json
docs/: AI_AGENTS.md  AI_ARCHITECTURE.md  AI_PROVIDER_SYSTEM.md  AI_SECURITY.md  ENTERPRISE_IMPLEMENTATION_PLAN.md  ENTERPRISE_READINESS_REVIEW.md  NODE_GRAPH_IMPLEMENTATION_PLAN.md  PHASE8_MARKETING_INTELLIGENCE_PLAN.md  RAG_ARCHITECTURE.md
(+271 files in other folders)
