[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "edt-ai-worker"
version = "0.1.0"
description = "Bounded H1 AI, evidence, and deterministic simulation worker for the Enterprise Digital Twin"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Proprietary" }
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "rfc8785==0.1.4",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[project.scripts]
edt-ai-worker = "edt_ai_worker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edt_ai_worker"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
